jlatexmath (0.8.4)
	 * Greek support added

 -- Calixte Denizet <Calixte.Denizet@ac-rennes.fr>  Thu, 31 Dec 2009 16:10:23 +0100

jlatexmath (0.8.3)
	 * Cyrillic is now supported with unicode encoding (so we can search a cyrillic string in a pdf)
	 
	 * Fix several little bugs
	 
	 * Usage of commands such as \mathrm, \mathit, ... has been improved

 -- Calixte Denizet <Calixte.Denizet@ac-rennes.fr>  Wed, 30 Dec 2009 17:33:47 +0100
 
	 * Adds \fgcolor and \bgcolor

 -- Calixte Denizet <Calixte.Denizet@ac-rennes.fr>  Sat, 26 Dec 2009 21:05:38 +0100

    	 * Fixes a bug with kerns pairs.

 -- Calixte Denizet <Calixte.Denizet@ac-rennes.fr>  Fri, 25 Dec 2009 00:03:44 +0100
    	 
	 * Provides a target to build the doc "ant doc"

 -- Sylvestre Ledru <Sylvestre.ledru@scilab.org>  Wed, 16 Dec 2009 14:33:26 +0100

jlatexmath (0.8.2)
	 * Fixes a bad sqrt symbol and adds a little space after an atom under a sqrt

 -- Calixte Denizet <Calixte.Denizet@ac-rennes.fr>  Thu, 17 Dec 2009 21:27:38 +0100	   

jlatexmath (0.8.1)

	 * Fixes a regression in the version 0.8

 -- Sylvestre Ledru <Sylvestre.ledru@scilab.org>  Wed, 16 Dec 2009 14:33:26 +0100

jlatexmath (0.8)

	 * Jlatexmath can now compile under Java 1.5 (registerFont is disabled
	 in this case).

 -- Sylvestre Ledru <Sylvestre.ledru@scilab.org>  Tue, 15 Dec 2009 17:46:18 +0100

jlatexmath (0.7)

	 * Bad name in MANIFEST for stmary

 -- Calixte Denizet <Calixte.Denizet@ac-rennes.fr>  Thu, 12 Dec 2009 15:50:38 +0100
