@@ -48,8 +48,7 @@
  		<TextStyleMapping name="mathbf">
 		  <MapRange code="numbers" fontId="jlm_cmbx10" start="48"/>
 		  <MapRange code="capitals" fontId="jlm_cmbx10" start="65"/>
-		  <MapRange code="small" fontId="jlm_cmbx10" start="97"/>		
-		</TextStyleMapping>
+		  <MapRange code="small" fontId="jlm_cmbx10" start="97"/>			</TextStyleMapping>
 
 		<TextStyleMapping name="mathnormal">
 			<MapRange code="numbers" fontId="jlm_cmr10" start="48"/>
