@@ -20,6 +20,7 @@ Use "surd" instead. -->
 		<SymbolMapping name="jlatexmathpercent" ch="37" fontId="jlm_cmr10"/>
 		<SymbolMapping name="jlatexmathampersand" ch="38" fontId="jlm_cmr10"/>
 		<SymbolMapping name="jlatexmatharobase" ch="64" fontId="jlm_cmr10"/>
+		<SymbolMapping name="jlatexmathapos" ch="39" fontId="jlm_cmr10"/>
 		<SymbolMapping name="oe" ch="190" fontId="jlm_cmti10"/>
 		<SymbolMapping name="ae" ch="189" fontId="jlm_cmti10"/>
 		<SymbolMapping name="OE" ch="193" fontId="jlm_cmti10"/>
@@ -40,11 +41,13 @@ Use "surd" instead. -->
 		<SymbolMapping name="ddot" ch="196" fontId="jlm_cmr10"/> 
 		<SymbolMapping name="doubleacute" ch="125" fontId="jlm_cmr10"/>
 		<SymbolMapping name="tilde" ch="126" fontId="jlm_cmr10"/>
-  		<SymbolMapping name="mathring" ch="186" fontId="jlm_cmr10"/>  
+  		<SymbolMapping name="mathring" ch="186" fontId="jlm_cmr10"/>
+		<SymbolMapping name="jlatexmathring" ch="186" fontId="jlm_cmr10"/>
 		<SymbolMapping name="bar" ch="185" fontId="jlm_cmr10"/>  
 		<SymbolMapping name="breve" ch="184" fontId="jlm_cmr10"/> 
-		<SymbolMapping name="check" ch="183" fontId="jlm_cmti10"/>  
-		<SymbolMapping name="hat" ch="94" fontId="jlm_cmr10"/>  
+		<SymbolMapping name="check" ch="183" fontId="jlm_cmr10"/>  
+		<SymbolMapping name="hat" ch="94" fontId="jlm_cmr10"/>
+		<SymbolMapping name="ogonek" ch="197" fontId="jlm_cmr10"/>
 		<SymbolMapping name="vec" ch="126" fontId="jlm_cmmi10_unchanged"/>  
 		<SymbolMapping name="dot" ch="95" fontId="jlm_cmr10"/>  
 		<SymbolMapping name="widehat" ch="98" fontId="jlm_cmex10"/>  
