@@ -370,5 +370,6 @@
    <Char code="125" width="0.574997" height="0.694445" />
    <Char code="126" width="0.574997" height="0.694445" />
    <Char code="196" width="0.574997" height="0.694445" />
+   <Char code="197" width="0.319366" height="0.029" depth="0.215" />
 </Font>
 
