@@ -350,5 +350,6 @@
    <Char code="125" width="0.591105" height="0.694445" italic="0.114723" />
    <Char code="126" width="0.591105" height="0.694445" italic="0.114723" />
    <Char code="196" width="0.591105" height="0.694445" italic="0.114725" />
+   <Char code="197" width="0.355469" height="0.037" depth="0.193" />
 </Font>
 
