@@ -370,5 +370,5 @@
    <Char code="125" width="0.500002" height="0.694445" />
    <Char code="126" width="0.500002" height="0.667859" />
    <Char code="196" width="0.500002" height="0.667859" />
+   <Char code="197" width="0.27771" height="0.018" depth="0.197" />
 </Font>
-
