@@ -313,5 +313,6 @@
    <Char code="125" width="0.500002" height="0.694445" />
    <Char code="126" width="0.500002" height="0.676588" />
    <Char code="196" width="0.500002" height="0.679365" />
+   <Char code="197" width="0.27771" height="0.048" depth="0.212" />
 </Font>
 
