@@ -314,5 +314,6 @@
    <Char code="125" width="0.550003" height="0.694445" />
    <Char code="126" width="0.550003" height="0.694445" />
    <Char code="196" width="0.550003" height="0.694445" />
+   <Char code="197" width="0.305481" height="0.073" depth="0.194" />
 </Font>
 
