@@ -313,5 +313,6 @@
    <Char code="125" width="0.500002" height="0.694445" italic="0.0920515" />
    <Char code="126" width="0.500002" height="0.676588" italic="0.088257" />
    <Char code="196" width="0.500002" height="0.679365" italic="0.063848" />
+   <Char code="197" width="0.27771" height="0.048" depth="0.212" />
 </Font>
 
