@@ -131,5 +131,6 @@
    <Char code="125" width="0.524996" height="0.694445" depth="0.083331" />
    <Char code="126" width="0.524996" height="0.611112" />
    <Char code="196" width="0.524996" height="0.611112" />
+   <Char code="197" width="0.524872" height="0.057" depth="0.191" />
 </Font>
 
