@@ -1,3 +1,10 @@
+jlatexmath (0.8.5)
+	 * Complete unicode table for latin alphabets
+
+	 * Fix few bugs of rendering
+
+ -- Calixte Denizet <Calixte.Denizet@ac-rennes.fr>  Sat, 02 Jan 2010 20:03:36 +0100
+
 jlatexmath (0.8.4)
 	 * Greek support added
 
